--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           g++ -std=c++17 -o nms-downloader-wrapper nmsdownloader.cpp
           mkdir -p dist
-          mv nms-wrapper dist/nms-wrapper-linux
+          mv nms-downloader-wrapper dist/nms-downloader-wrapper
           
       - name: Build on Windows
         if: matrix.os == 'windows-latest'
