--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -38,7 +38,7 @@ jobs:
           }
 
           # Call vcvarsall.bat for x64 environment and then compile
-          cmd /c "`"$vcvarsall`" x64 && cl.exe /EHsc /std:c++17 nmsdownloader.cpp /F
+          cmd /c '"'"$vcvarsall"'" x64 && cl.exe /EHsc /std:c++17 nmsdownloader.cpp /Fe:dist\nms-downloader-wrapper.exe'
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
